--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <p>Hello Ricardo</p>
 <p>It's Xiaoxue here. </p>
 <p>I'm doing my baby steps :) </p>
+<iframe src="https://giphy.com/embed/Hs6f36KUBjWww" width="480" height="322" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/naruto-too-lazy-to-put-more-tags-ohhh-well-maybe-ill-edit-later-challenge-Hs6f36KUBjWww">via GIPHY</a></p>
