Test in the about page

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -4,6 +4,8 @@ permalink: /about/
 ---
 <h1>About</h1>
 
+<p> BLBLALBLBLBLBL </p>
+
 <p>I'm baby irony franzen keffiyeh ugh, pinterest pug synth echo park thundercats. Poutine bespoke enamel pin fam velit church-key disrupt palo santo godard nisi forage 8-bit. Banjo disrupt knausgaard, yuccie af enim portland taxidermy vaporware vape. Snackwave nulla ut in edison bulb ennui actually viral tacos glossier hella +1 unicorn godard.</p>
 
 <p>Cray mustache tousled quinoa activated charcoal pok pok. Kombucha cray man bun typewriter, dolor farm-to-table health goth forage quis. Forage shabby chic meh craft beer, laboris adipisicing consequat cloud bread tempor id lyft farm-to-table intelligentsia. Stumptown neutra migas lomo man braid readymade kale chips.</p>
