Better test text on the about page

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -4,7 +4,7 @@ permalink: /about/
 ---
 <h1>About</h1>
 
-<p> BLBLALBLBLBLBL </p>
+<p> This is a change to the about page </p>
 
 <p>I'm baby irony franzen keffiyeh ugh, pinterest pug synth echo park thundercats. Poutine bespoke enamel pin fam velit church-key disrupt palo santo godard nisi forage 8-bit. Banjo disrupt knausgaard, yuccie af enim portland taxidermy vaporware vape. Snackwave nulla ut in edison bulb ennui actually viral tacos glossier hella +1 unicorn godard.</p>
 
